mcdSalesforce/main/default/objects/Movie__c/fields/Homepage__c.field-meta.xml
<CustomField>
    <fullName>Homepage__c</fullName>
    <label>Homepage</label>
    <type>Url</type>
</CustomField>