mcdSalesforce/main/default/objects/Movie__c/fields/Original_Language__c.field-meta.xml
<CustomField>
    <fullName>Original_Language__c</fullName>
    <label>Original Language</label>
    <length>25</length>
    <type>Text</type>
</CustomField>