mcdSalesforce/main/default/objects/Movie__c/fields/Original_Title__c.field-meta.xml
<CustomField>
    <fullName>Original_Title__c</fullName>
    <label>Original Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>