mcdSalesforce/main/default/objects/Movie__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>