mcdSalesforce/main/default/objects/Movie__c/fields/Runtime__c.field-meta.xml
<CustomField>
    <fullName>Runtime__c</fullName>
    <label>Runtime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>