mcdSalesforce/main/default/objects/Movie__c/fields/Tagline__c.field-meta.xml
<CustomField>
    <fullName>Tagline__c</fullName>
    <label>Tagline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>