mcdSalesforce/main/default/objects/Movie__c/fields/temp_Cast__c.field-meta.xml
<CustomField>
    <fullName>temp_Cast__c</fullName>
    <label>temp Cast</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>