mcdSalesforce/main/default/objects/Movie__c/fields/temp_Genre__c.field-meta.xml
<CustomField>
    <fullName>temp_Genre__c</fullName>
    <label>temp Genre</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>