mcdSalesforce/main/default/objects/Movie__c/fields/temp_Keyword__c.field-meta.xml
<CustomField>
    <fullName>temp_Keyword__c</fullName>
    <label>temp Keyword</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>