mcdSalesforce/main/default/objects/Movie__c/fields/temp_production_company__c.field-meta.xml
<CustomField>
    <fullName>temp_production_company__c</fullName>
    <label>temp production company</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>