mcdSalesforce/main/default/objects/Movie__c/fields/temp_production_country__c.field-meta.xml
<CustomField>
    <fullName>temp_production_country__c</fullName>
    <label>temp production country</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>