mcdSalesforce/main/default/objects/Movie__c/fields/temp_spoken_language__c.field-meta.xml
<CustomField>
    <fullName>temp_spoken_language__c</fullName>
    <label>temp spoken language</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>