mcdSalesforce/main/default/objects/Movie__c/fields/Vote_Average__c.field-meta.xml
<CustomField>
    <fullName>Vote_Average__c</fullName>
    <label>Vote Average</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>