mcdSalesforce/main/default/objects/Movie__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Popularity__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Revenue__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>